--- a/views/form.ejs
+++ b/views/form.ejs
@@ -129,68 +129,70 @@
       <p id="form-results"><%= `${name}'s Receipt` %></p>
 
       <table class="user-receipt">
-        <tr>
-          <th>Name:</th>
-          <td><%= name %></td>
-        </tr>
-        <tr>
-          <th>Address:</th>
-          <td><%= address %></td>
-        </tr>
-        <tr>
-          <th>City:</th>
-          <td><%= city %></td>
-        </tr>
-        <tr>
-          <th>Prov/Ter</th>
-          <td><%= province %></td>
-        </tr>
-        <tr>
-          <th>Phone Number:</th>
-          <td><%= phoneNumber %></td>
-        </tr>
-        <tr>
-          <th>Email:</th>
-          <td><%= email %></td>
-        </tr>
-        <tr>
-          <th>City:</th>
-          <td><%= city %></td>
-        </tr>
+        <tbody>
+          <tr>
+            <th>Name:</th>
+            <td><%= name %></td>
+          </tr>
+          <tr>
+            <th>Address:</th>
+            <td><%= address %></td>
+          </tr>
+          <tr>
+            <th>City:</th>
+            <td><%= city %></td>
+          </tr>
+          <tr>
+            <th>Prov/Ter</th>
+            <td><%= province %></td>
+          </tr>
+          <tr>
+            <th>Phone Number:</th>
+            <td><%= phoneNumber %></td>
+          </tr>
+          <tr>
+            <th>Email:</th>
+            <td><%= email %></td>
+          </tr>
+          <tr>
+            <th>City:</th>
+            <td><%= city %></td>
+          </tr>
 
-        <% if(medicalTapeCost !== 0) { %>
-        <tr>
-          <th>Medical Tape:</th>
-          <td>$<%= medicalTapeCost %></td>
-        </tr>
-        <% } %> <% if(chalkCost !== 0) { %>
-        <tr>
-          <th>Chalk:</th>
-          <td>$<%= chalkCost %></td>
-        </tr>
-        <% } %> <% if(gymnasticSuitCost !== 0) { %>
-        <tr>
-          <th>Gymnastic Suit:</th>
-          <td>$<%= gymnasticSuitCost %></td>
-        </tr>
-        <% } %> <% if( gymnasticGripCost !== 0) { %>
-        <tr>
-          <th>Gymnastic Grip:</th>
-          <td>$<%= gymnasticGripCost %></td>
-        </tr>
-        <% } %>
-        <tr>
-          <th>Sub Total:</th>
-          <td>$<%= subTotal %></td>
-        </tr>
-        <tr>
-          <th>Total Tax:</th>
-          <td>$<%= totalTax %></td>
-        </tr>
-        <tr>
-          <th>Total Amount:</th>
-          <td>$<%= totalAmount %></td>
-        </tr>
+          <% if(medicalTapeCost !== 0) { %>
+          <tr>
+            <th>Medical Tape:</th>
+            <td>$<%= medicalTapeCost %></td>
+          </tr>
+          <% } %> <% if(chalkCost !== 0) { %>
+          <tr>
+            <th>Chalk:</th>
+            <td>$<%= chalkCost %></td>
+          </tr>
+          <% } %> <% if(gymnasticSuitCost !== 0) { %>
+          <tr>
+            <th>Gymnastic Suit:</th>
+            <td>$<%= gymnasticSuitCost %></td>
+          </tr>
+          <% } %> <% if( gymnasticGripCost !== 0) { %>
+          <tr>
+            <th>Gymnastic Grip:</th>
+            <td>$<%= gymnasticGripCost %></td>
+          </tr>
+          <% } %>
+          <tr>
+            <th>Sub Total:</th>
+            <td>$<%= subTotal %></td>
+          </tr>
+          <tr>
+            <th>Total Tax:</th>
+            <td>$<%= totalTax %></td>
+          </tr>
+          <tr>
+            <th>Total Amount:</th>
+            <td>$<%= totalAmount %></td>
+          </tr>
+        </tbody>
       </table>
 
       <% } else { %>
@@ -207,3 +209,4 @@
   <!-- 
   <div class="clear"></div> -->
 </body>
+<%- include('layouts/footer'); -%>
