--- a/public/css/stylesheets.css
+++ b/public/css/stylesheets.css
@@ -32,7 +32,7 @@ h1 {
 #form-results {
   text-align: center;
   font-size: 17px;
-  /* font-weight: bold; */
+  font-weight: bold;
 }
 
 .form-data {
@@ -147,7 +147,7 @@ table > thead > tr > th {
 }
 
 .fetch-orders {
-  margin: 20px;
+  margin: auto;
 }
 
 footer {
