Added author name to files

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,3 +1,4 @@
+<!-- Author Najeam 7457195 -->
 <footer>
     &#169 2021 Copyright Najeam Mehanmal 7457195  Nmehanmal7195@conestogac.on.ca
 </footer>
